--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pagina</title>
+    <h1>Creamos y publicamos nuestra primer pagina</h1>
   </head>
   <body></body>
 </html>
