Agregamos el listado de mis pasatiempos y la carpeta de imagenes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pagina</title>
-    <h1>Creamos y publicamos nuestra primer pagina</h1>
+    <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>encabezado</header>
+    <main>
+      <h1>Esta sera mi pagina donde hablo de mis pasatiempos</h1>
+      <h2>Cocinar</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates vel
+        possimus doloremque aliquam reprehenderit sit at excepturi. Amet modi
+        maiores alias animi quam quo reprehenderit! Quo minus eum id tempora.
+      </p>
+      <img
+        width="200px"
+        src="https://images.pexels.com/photos/32191355/pexels-photo-32191355.jpeg"
+        alt="imagen de un pastel"
+      />
+      <h2>bailar</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat fuga
+        eius reiciendis! Assumenda alias labore fuga aspernatur vero accusantium
+        eum officiis laudantium omnis quis nostrum delectus, debitis, error
+        ratione illum?
+      </p>
+      <h2>estar con mi familia</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+        temporibus dolorum necessitatibus nisi laboriosam, ad tempore nihil
+        iusto, dolorem provident inventore corrupti incidunt laborum eligendi
+        ipsa atque voluptates eaque earum?
+      </p>
+      <img
+        width="200px"
+        src="imagenes/imagen_familia.jpg"
+        alt="imagen de una reunion familiar"
+      />
+    </main>
+    <aside>publicidad</aside>
+    <footer>Aqui ira mi pie de pagina</footer>
+  </body>
 </html>
